@@ -31,12 +31,6 @@ import org.apache.hadoop.io.SequenceFile.Reader;
 /** JUnit test case for HLog */
 public class TestHLog extends HBaseTestCase implements HConstants {
 
-  /** {@inheritDoc} */
-  @Override
-  public void setUp() throws Exception {
-    super.setUp();
-  }
-  
   /**
    * @throws IOException
    */
@@ -101,9 +95,4 @@ public class TestHLog extends HBaseTestCase implements HConstants {
     }
   }
 
-  /** {@inheritDoc} */
-  @Override
-  public void tearDown() throws Exception {
-    super.tearDown();
-  }
 }
